force-app/main/default/objects/PTW_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Report__c</fullName>
        <formula>IF( ISNUMBER( Answer__c ),VALUE(Answer__c) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <formula>VALUE(if(right(LEFT(Question_Text__c,2),1)= &apos;.&apos;,LEFT(Question_Text__c,1),LEFT(Question_Text__c,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_no__c</fullName>
        <formula>&apos;Item &apos;+if(right(LEFT(Question_Text__c,2),1)= &apos;.&apos;,LEFT(Question_Text__c,1),LEFT(Question_Text__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item no.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Format : Header.Id + Question</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Main_Work_Center_PTW__c</fullName>
        <formula>IF( ISBLANK(PTW_Header__r.Auditor_Name__r.User__r.Main_Work_Center__c) , &apos;OPS-TOC1&apos;, (PTW_Header__r.Auditor_Name__r.User__r.Main_Work_Center__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <formula>CreatedBy.Main_Work_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTW_Header__c</fullName>
        <label>PTW Header</label>
        <referenceTo>PTW_Header__c</referenceTo>
        <relationshipLabel>PTW Answer</relationshipLabel>
        <relationshipName>PTW_Answer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Answer</label>
        <referenceTo>PTW_Answer__c</referenceTo>
        <relationshipLabel>PTW Answer</relationshipLabel>
        <relationshipName>PTW_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>PTW_Question_Master__c</referenceTo>
        <relationshipLabel>PTW Answer</relationshipLabel>
        <relationshipName>PTW_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PTW Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PTW_Header__c</columns>
        <columns>NAME</columns>
        <columns>Answer__c</columns>
        <columns>Key__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTWA-{0000}</displayFormat>
        <label>PTW Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>